@@ -4498,7 +4498,7 @@ Jste si jistý, že chcete přepsat stávající složku?</translation>
     <message>
         <location filename="../qjackctlSetupForm.cpp" line="1001"/>
         <location filename="../qjackctlSetupForm.cpp" line="1064"/>
-        <location filename="../qjackctlSetupForm.cpp" line="2056"/>
+        <location filename="../qjackctlSetupForm.cpp" line="2069"/>
         <source>Warning</source>
         <translation>Varování</translation>
     </message>
@@ -4631,7 +4631,7 @@ next time you start this application.</source>
 když příště spustíte tento program.</translation>
     </message>
     <message>
-        <location filename="../qjackctlSetupForm.cpp" line="2057"/>
+        <location filename="../qjackctlSetupForm.cpp" line="2070"/>
         <source>Some settings have been changed.
 
 Do you want to apply the changes?</source>
