@@ -4445,7 +4445,7 @@ Soll das existierende Verzeichnis überschrieben werden?</translation>
     <message>
         <location filename="../qjackctlSetupForm.cpp" line="1001"/>
         <location filename="../qjackctlSetupForm.cpp" line="1064"/>
-        <location filename="../qjackctlSetupForm.cpp" line="2056"/>
+        <location filename="../qjackctlSetupForm.cpp" line="2069"/>
         <source>Warning</source>
         <translation>Warnung</translation>
     </message>
@@ -4573,7 +4573,7 @@ next time you start this application.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qjackctlSetupForm.cpp" line="2057"/>
+        <location filename="../qjackctlSetupForm.cpp" line="2070"/>
         <source>Some settings have been changed.
 
 Do you want to apply the changes?</source>
