@@ -4495,7 +4495,7 @@ Ste si istý, že chcete prepísať existujúci priečinok?</translation>
     <message>
         <location filename="../qjackctlSetupForm.cpp" line="1001"/>
         <location filename="../qjackctlSetupForm.cpp" line="1064"/>
-        <location filename="../qjackctlSetupForm.cpp" line="2056"/>
+        <location filename="../qjackctlSetupForm.cpp" line="2069"/>
         <source>Warning</source>
         <translation>Upozornenie</translation>
     </message>
@@ -4628,7 +4628,7 @@ next time you start this application.</source>
 ďalšom spustení tohto programu.</translation>
     </message>
     <message>
-        <location filename="../qjackctlSetupForm.cpp" line="2057"/>
+        <location filename="../qjackctlSetupForm.cpp" line="2070"/>
         <source>Some settings have been changed.
 
 Do you want to apply the changes?</source>
